app/infrastructure/eks/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mutual-fund
  labels:
    app.kubernetes.io/part-of: mutual-fund-platform
    environment: production
