app/infrastructure/eks/prod/worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf-worker
  namespace: mutual-fund
  labels:
    app: mf-worker
    app.kubernetes.io/name: mf-worker
    app.kubernetes.io/part-of: mutual-fund-platform
spec:
  replicas: 1

  selector:
    matchLabels:
      app: mf-worker

  template:
    metadata:
      labels:
        app: mf-worker
        app.kubernetes.io/name: mf-worker
        app.kubernetes.io/part-of: mutual-fund-platform

    spec:

      nodeSelector:
        workload: worker

      tolerations:
        - key: dedicated
          operator: Equal
          value: worker
          effect: NoSchedule

      containers:
        - name: worker

          image: 526484109177.dkr.ecr.ap-south-1.amazonaws.com/mf-worker:1.0.0

          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true

      terminationGracePeriodSeconds: 30
